--- a/.config
+++ b/.config
@@ -1,61 +1,40 @@
 CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_core2=y
-CONFIG_TARGET_x86_core2_Generic=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_Generic=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IPV6 is not set
 # CONFIG_IPV6 is not set
 # CONFIG_KERNEL_IPV6 is not set
-CONFIG_LIBMBEDTLS_HAVE_SSE2=y
-CONFIG_LIBSODIUM_MINIMAL=y
-CONFIG_PACKAGE_boost=y
-CONFIG_PACKAGE_boost-date_time=y
-CONFIG_PACKAGE_boost-program_options=y
-CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_dns2socks=y
+# CONFIG_PACKAGE_UnblockNeteaseMusic is not set
+# CONFIG_PACKAGE_autosamba is not set
+# CONFIG_PACKAGE_kmod-tun is not set
 CONFIG_PACKAGE_kmod-usb-printer=y
+# CONFIG_PACKAGE_libatomic is not set
 CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libevent2=y
-CONFIG_PACKAGE_libmbedtls=y
-CONFIG_PACKAGE_libsodium=y
-CONFIG_PACKAGE_libuv=y
+# CONFIG_PACKAGE_libcares is not set
+# CONFIG_PACKAGE_libhttp-parser is not set
+# CONFIG_PACKAGE_libminiupnpc is not set
+# CONFIG_PACKAGE_libnatpmp is not set
+# CONFIG_PACKAGE_libnghttp2 is not set
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+# CONFIG_PACKAGE_luci-app-samba is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
 CONFIG_PACKAGE_luci-app-webadmin=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_node is not set
 CONFIG_PACKAGE_p910nd=y
-CONFIG_PACKAGE_redsocks2=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-server=y
-CONFIG_PACKAGE_simple-obfs=y
-CONFIG_PACKAGE_trojan=y
+# CONFIG_PACKAGE_samba36-server is not set
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_v2ray=y
-CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_V2RAY_COMPRESS_UPX=y
-CONFIG_V2RAY_DISABLE_NONE=y
-CONFIG_V2RAY_EXCLUDE_ASSETS=y
-CONFIG_V2RAY_EXCLUDE_V2CTL=y
-CONFIG_V2RAY_JSON_INTERNAL=y
-CONFIG_boost-compile-visibility-hidden=y
-CONFIG_boost-runtime-shared=y
-CONFIG_boost-static-and-shared-libs=y
-CONFIG_boost-variant-release=y
+# CONFIG_PACKAGE_vsftpd-alt is not set
+# CONFIG_PACKAGE_wsdd2 is not set
+# CONFIG_PACKAGE_zerotier is not set
+# CONFIG_UnblockNeteaseMusic_NodeJS is not set
 CONFIG_PACKAGE_iptables-mod-ipsec=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-cbc=y
